--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         
           <ul id="listFilter"></ul>
         </aside>
-        <div class="store">
+        <div class="store" id="storeContainer">
 
         </div>
       </div>
