--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <input type="text" placeholder="Ingrese una imagen (url)" id="imagen">
             <input type="number" placeholder="Precio" id="precio" value="0">
             <select id="categoria">
-              <option value="">Seleccione una Categoria</option>
+              <option value="0">Seleccione una Categoria</option>
               <option value="Hamburguesas">Hamburguesas</option>
               <option value="Papas">Papas</option>
               <option value="Gaseosas">Gaseosas</option>
