--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       <div class="container_principalHeader">
         <div class="container_contentHeader">
           <div class="headerSearch">
-            <input type="text" placeholder="Ingrese un elemento" class="inputHeader">
-            <button class="header_buttonSearch">
+            <input type="text" placeholder="Ingrese un elemento" class="inputHeader" id="nameSearch">
+            <button class="header_buttonSearch" id="searchButton">
               Buscar
               <span class="material-symbols-outlined">search</span>
             </button>
