--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
               <option value="0">Seleccione una Categoria</option>
               <option value="Hamburguesas">Hamburguesas</option>
               <option value="Papas">Papas</option>
-              <option value="Gaseosas">Gaseosas</option>
+              <option value="Bebidas">Bebidas</option>
             </select>
           </div>
           <div class="container_ButtonsPopUp">
